--- a/authapp/templates/authapp/base.html
+++ b/authapp/templates/authapp/base.html
@@ -1,20 +1,32 @@
-{% load static %}
-
 <!DOCTYPE html>
+{% load static %}
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>{% block title %}{{ title|title }}{% endblock %}</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+   <meta charset="utf-8">
+   <title>
+        {% block title %}
+            {{ title|title }}
+        {% endblock %}
+    </title>
+    {% block css %}
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+        <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">
+    {% endblock %}
+    {% block js %}
+
+    {% endblock %}
 </head>
 <body>
-	<div class="container">
+   <div class="container">
+        <div class="login">
+            <div class="h2 text-center head">
+                Вход в систему
+            </div>
 
-		{% block content %}
-		<h1>Тут будет контент</h1>
-		{% endblock %}
+            {% block content %}
 
-		<div class="clr"></div>
-	</div>
+            {% endblock %}
+        </div>
+   </div>
 </body>
 </html>
