--- a/authapp/templates/authapp/edit.html
+++ b/authapp/templates/authapp/edit.html
@@ -1,15 +1,24 @@
 {% extends 'authapp/base.html' %}
 {% load static %}
 
-
 {% block content %}
+    <div class="col-4 mx-auto">
+        <div class="row">
+            <div class="user_avatar">
+                <img src="/media/{{ user.avatar }}" class="rounded-circle">
+            </div>
+        </div>
     <div class="row">
-        <div class="col-5">
-        <form class="form-horizontal" action="{% url 'auth:edit' %}" method="post">
+        <form class="form-horizontal" action="{% url 'auth:edit' %}" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{ edit_form.as_p }}
-            <br>
-            <input class="form-control btn-primary" type="submit" value="сохранить">
+            <input class="form-control" type="submit" value="сохранить">
         </form>
-        </div>
+        <button class="btn btn-round form-control last">
+            <a href="{% url 'index' %}" class="">
+                на главную
+            </a>
+        </button>
     </div>
+    </div>
+{% endblock %}
